force-app/main/default/objects/Account/fields/CoIT_Numero_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_de_Documento__c</fullName>
    <label>Numero de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>