force-app/main/default/objects/Account/fields/CoIT_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Partner_Status__c</fullName>
    <description>Indicates the partner account status</description>
    <inlineHelpText>Indicates the partner account status</inlineHelpText>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>