force-app/main/default/objects/Account/fields/CoIt_Territorio_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIt_Territorio_Servicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territorio de Servicio</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>