force-app/main/default/objects/Account/fields/CoIT_Tipo_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Tipo_de_Documento__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>NIT</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>