force-app/main/default/objects/Account/listViews/cuenta_principal.listView-meta.xml
<ListView>
    <fullName>cuenta_principal</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>verdadero</value>
    </filters>
    <label>cuenta principal</label>
</ListView>